# durchen-content-annotation

./: README.md  pyproject.toml
data/: annotated_text.txt  durchen.json  segmentation.json  segments_with_tags.json  text.txt
src/durchen_content_annotation/: __init__.py  annotation.py  pipeline.py
tests/: test_annotation.py
